# calculus_1_project

./: .gitignore  pyproject.toml  requirements.txt
simulation_package/scenes/: intro.py
simulation_package/utils/: styles.py
